--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A demo app that allows users to connect socially to other users with similar interests",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app/server.js"
   },
   "author": "Mars Getsoian",
   "license": "MIT",
